media query fixed to fix sizing on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body    {
 
 /*  This increases the image sizes on small screens so they are stacked on top of one another.   */
 
-@media (max-width: 812px) {
+@media (max-width: 900px) {
     .pic    {
         width: 100%;
     }
